--- a/v.0.1.4/Home/index.html
+++ b/v.0.1.4/Home/index.html
@@ -1,107 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coral Incompany</title>
-    <img src="Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
+    <img src="/v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
     <h2 class="header" style="font-size: 15;">Lets explore the world of projects with us now!</h2>
 </head>
-<link rel="shortcut icon" type="image/jpg" href="Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
-<style>
-    
-</style>
+<link rel="shortcut icon" type="image/jpg" href="/v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
+<link rel="stylesheet" href="/v.0.1.4/CSS/style.css">
 <body>
-    <style>
-        .header {
-          color: orange;
-          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-          margin: 25px;
-          padding: 10px;
-             }
-        .description {
-          color: orange;
-          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-          margin: 5px;
-          padding: 5px;
-          width: 500px;
-             }
-        html {
-          background-image: url('https://64.media.tumblr.com/a3ec55047221984270c8bbdfdc2367ad/68e3639b800c3b4a-b5/s640x960/ac1287bb461e4b7a48bdbec2b994b827e17287a3.gifv');
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: 100% 100%;
-        }
-        button {
-        display: inline-block;
-        background-color: #7b38d8;
-        border-radius: 50px;
-        border: 4px double #cccccc;
-        color: #ffffff;
-        text-align: center;
-        font-size: 18px;
-        padding: 15px;
-        width: 100px;
-        transition: all 0.5s;
-        cursor: pointer;
-        margin: 10px;
-        text-decoration: none;
-      }
-      button span {
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-        transition: 0.5s;
-      }
-      button span:after {
-        content: '✅';
-        position: absolute;
-        opacity: 0;
-        top: -2px;
-        right: -20px;
-        transition: 0.5s;
-      }
-      button:hover {
-        background-color: #f7c2f9;
-      }
-      button:hover span {
-        padding-right: 25px;
-      }
-      button:hover span:after {
-        opacity: 1;
-        right: 0;
-      }
-      box {
-        margin: 5px;
-        padding: 5px;
-        float: left;
-      }
-      .ad{ 
-        float: none; 
-        color: violet; 
-        font-weight: bolder; 
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        width: 250px;
-      }
-      .button{
-        color: white;
-        background-color: green;
-        border: 5px solid greenyellow;
-        border-radius: 10px;
-        width: fit-content;
-        margin: 10px;
-        padding: 10px;
-        text-decoration: none;
-        font-weight: bold;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        position: static;
-      }
-      .button:hover{
-        opacity: 75%;
-      }
-        </style>
         <box>
         <h4 class="description">BogForlaget</h4>
         <p class="description">BogForlaget is a danish book industry which you can translate with google automatic
@@ -146,7 +56,26 @@
     <br>
     <p style="font-size: 13px; color: white; text-align: center;">©Coral Incompany | All Rights Reserved</p>
     <hr>
-    
     </box>
+    <div>
+    <article style="background-color: black;">
+      <img src="/v.0.1.4/Pic/CoralAI Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h1>CoralAI</h1>
+      <p style="font-size: 20px;">Introducing... CoralAI! We are under development of a beautiful
+                                  project called CoralAI to add free AI for everyone in the world! 
+                                  As we keep saying, our projects can suprise anyone! We are looking
+                                  forward to publish it on this website and keep a promise to you guys!
+                                  That is it will be 24/7 active and fast to respond. We do not wish to
+                                  take money out of you all for faster respond or 24/7 active. You're Welcome!</p>
+      <a href="" class="button" style="margin-left: 150px;">Coming Soon!</a>
+    </article>
+    <article style="background-color: darkred;">
+      <img src="/v.0.1.4/Pic/Slacker Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h2>Slacker Release</h2>
+      <p style="font-size: 20px;">Slacker is believed to have its web release 10th June 2023! The world is 
+      not only going to use SMS and Discord. They can then also use Slacker! We would love to hear suggestions
+      from as many people as possible. We want to grow our audicity so we can show that even though our bank is 
+      very empty, we can still skill and work!</p>
+      <a href="/v.0.1.4/Info and Modal Pages/slacker.html" class="button">Check News</a>
+    </article>
+    </div>
 </body>
 </html>
