--- a/v.0.1.4/Info and Modal Pages/slacker.html
+++ b/v.0.1.4/Info and Modal Pages/slacker.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Slacker Countdown</title>
-<link rel="shortcut icon" href="Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
+<link rel="shortcut icon" href="v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
 <style>
 p {
   text-align: center;
@@ -64,7 +64,7 @@ var x = setInterval(function() {
 }, 1000);
 </script>
 <div class="box">
-<img src="Pic/announcement png.png" style="float: left; width: 75px;"><h2 style="padding-right: 15%;">News</h2>
+<img src="v.0.1.4/Pic/announcement png.png" style="float: left; width: 75px;"><h2 style="padding-right: 15%;">News</h2>
 <hr>
 <h3>Slacker badges</h3>
 <h4>Slacker is a chatting app so it will be like every other chatting apps.
@@ -78,7 +78,7 @@ var x = setInterval(function() {
 <hr>
 </div>
 <div class="box">
-<img src="Pic/info png.png" style="float: left; width: 75px;"><h2 style="padding-right: 15%;">Updates/Info</h2>
+<img src="v.0.1.4/Pic/info png.png" style="float: left; width: 75px;"><h2 style="padding-right: 15%;">Updates/Info</h2>
 <hr>
 <h3>Countdown to...</h3>
 <h4>The current countdown you are seeing is to June 10th, 2023, 20:30:00.
