--- a/v.0.1.4/Home/index.html
+++ b/v.0.1.4/Home/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="\v.0.1.4\Pic\Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coral Incompany</title>
-    <img src="\v.0.1.4\Pic\Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
+    <img src="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
     <h2 class="header" style="font-size: 15;">Lets explore the world of projects with us now!</h2>
 </head>
-<link rel="shortcut icon" type="image/jpg" href="\v.0.1.4\Pic\Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
-<link rel="stylesheet" href="\v.0.1.4\CSS\style.css">
+<link rel="shortcut icon" type="image/jpg" href="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
+<link rel="stylesheet" href="../v.0.1.4/CSS/style.css">
 <body>
         <box>
         <h4 class="description">BogForlaget</h4>
@@ -28,7 +28,7 @@
         have much knowledge! Have fun and remember to share your score.
         </p>
     <button>
-        <a href="\v.0.1.4\Payment Pages/quizzy-pay.html">
+        <a href="../v.0.1.4/Payment Pages/quizzy-pay.html">
         <span style="color: white;">Visit</span>
         </a>
     </button>
@@ -39,7 +39,7 @@
         or talk with the whole community! Coming Out Soon!
       </p>
     <button style="width: 160px;">
-      <a href="\v.0.1.4\Info and Modal Pages\slacker.html">
+      <a href="../v.0.1.4/Info and Modal Pages/slacker.html">
       <span style="color: white;">Web Soon..</span>
       </a>
       </button>
@@ -59,7 +59,7 @@
     </box>
     <div>
     <article style="background-color: black;">
-      <img src="\v.0.1.4\Pic\CoralAI Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h1>CoralAI</h1>
+      <img src="../v.0.1.4/Pic/CoralAI Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h1>CoralAI</h1>
       <p style="font-size: 20px;">Introducing... CoralAI! We are under development of a beautiful
                                   project called CoralAI to add free AI for everyone in the world! 
                                   As we keep saying, our projects can suprise anyone! We are looking
@@ -69,12 +69,12 @@
       <a href="" class="button" style="margin-left: 150px;">Coming Soon!</a>
     </article>
     <article style="background-color: darkred;">
-      <img src="\v.0.1.4\Pic\Slacker Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h2>Slacker Release</h2>
+      <img src="../v.0.1.4/Pic/Slacker Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h2>Slacker Release</h2>
       <p style="font-size: 20px;">Slacker is believed to have its web release 10th June 2023! The world is 
       not only going to use SMS and Discord. They can then also use Slacker! We would love to hear suggestions
       from as many people as possible. We want to grow our audicity so we can show that even though our bank is 
       very empty, we can still skill and work!</p>
-      <a href="\v.0.1.4\Info and Modal Pages\slacker.html" class="button">Check News</a>
+      <a href="../v.0.1.4/Info and Modal Pages/slacker.html" class="button">Check News</a>
     </article>
     </div>
 </body>
