--- a/v.0.1.4/Home/index.html
+++ b/v.0.1.4/Home/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coral Incompany</title>
-    <img src="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
+    <img src="../Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png" style="width: 125px; float: left;"><h1 class="header" style="font-size: 17;">Coral</h1><h1 style="color: greenyellow; font-weight: bold; font-style: italic;">testing : v.0.1.4-alpha</h1>
     <h2 class="header" style="font-size: 15;">Lets explore the world of projects with us now!</h2>
 </head>
-<link rel="shortcut icon" type="image/jpg" href="../v.0.1.4/Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
+<link rel="shortcut icon" type="image/jpg" href="../Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
 <link rel="stylesheet" href="../v.0.1.4/CSS/style.css">
 <body>
         <box>
@@ -28,7 +28,7 @@
         have much knowledge! Have fun and remember to share your score.
         </p>
     <button>
-        <a href="../v.0.1.4/Payment Pages/quizzy-pay.html">
+        <a href="../Payment Pages/quizzy-pay.html">
         <span style="color: white;">Visit</span>
         </a>
     </button>
@@ -39,7 +39,7 @@
         or talk with the whole community! Coming Out Soon!
       </p>
     <button style="width: 160px;">
-      <a href="../v.0.1.4/Info and Modal Pages/slacker.html">
+      <a href="../Info and Modal Pages/slacker.html">
       <span style="color: white;">Web Soon..</span>
       </a>
       </button>
@@ -59,7 +59,7 @@
     </box>
     <div>
     <article style="background-color: black;">
-      <img src="../v.0.1.4/Pic/CoralAI Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h1>CoralAI</h1>
+      <img src="../Pic/CoralAI Logo - Made with PosterMyWall.png" style="width: 150px; float: left;"><h1>CoralAI</h1>
       <p style="font-size: 20px;">Introducing... CoralAI! We are under development of a beautiful
                                   project called CoralAI to add free AI for everyone in the world! 
                                   As we keep saying, our projects can suprise anyone! We are looking
