--- a/v.0.1.4/Home/index.html
+++ b/v.0.1.4/Home/index.html
@@ -10,7 +10,7 @@
     <h2 class="header" style="font-size: 15;">Lets explore the world of projects with us now!</h2>
 </head>
 <link rel="shortcut icon" type="image/jpg" href="../Pic/Copy of Coral Adalo Logo - Made with PosterMyWall.png"/>
-<link rel="stylesheet" href="../v.0.1.4/CSS/style.css">
+<link rel="stylesheet" href="../CSS/style.css">
 <body>
         <box>
         <h4 class="description">BogForlaget</h4>
